[package]
name = "pomodors"
version = "0.1.0"
authors = ["yotaro-shimose <yosemat.beta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
structopt = "0.3.13"
anyhow = "1.0.42"
crossterm = "0.20.0"