[package]
name = "pomodors"
version = "0.1.0"
authors = ["yotaro-shimose <yosemat.beta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
structopt = "0.3.13"
anyhow = "1.0.42"
crossterm = "0.20.0"
tokio = { version = "1.10.0", features = ["full"] }
google-calendar3 = "2.0.4"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
whiteread = "0.5.0"
